Linked the DOM in JS and added the basic variables

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="Clear" class="num">AC</div>
             <div id="State" class="num">+/-</div>
             <div id="Percentege" class="num">%</div>
-            <div id="Devide" class="num">/</div>
+            <div id="Divide" class="num">/</div>
         </div>
         <div class="row-one">
             <div id="7" class="num">7</div>
