Changing the logic

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
     <div class="container">
         <div class="screen">0</div>
         <div class="row-one">
-            <div id="Clear" class="num">AC</div>
-            <div id="State" class="num">+/-</div>
-            <div id="Percentege" class="num">%</div>
-            <div id="Divide" class="num">/</div>
+            <button onclick="whipe()" class="num"><div>C</div></button>
+            <button class="num"><div>+/-</div></button>
+            <button class="num"><div>%</div></button>
+            <button class="num"><div>/</div></button>
         </div>
         <div class="row-one">
-            <div id="7" class="num">7</div>
-            <div id="8" class="num">8</div>
-            <div id="9" class="num">9</div>
-            <div id="Times" class="num">*</div>
+            <button onclick="seven()" class="num"><div>7</div></button>
+            <button onclick="eight()" class="num"><div>8</div></button>
+            <button onclick="nine()" class="num"><div>9</div></button>
+            <button class="num"><div>*</div></button>
         </div>
         <div class="row-one">
-            <div id="4" class="num">4</div>
-            <div id="5" class="num">5</div>
-            <div id="6" class="num">6</div>
-            <div id="Minus" class="num">-</div>
+            <button onclick="four()" class="num"><div>4</div></button>
+            <button onclick="five()" class="num"><div>5</div></button>
+            <button onclick="six()" class="num"><div>6</div></button>
+            <button class="num"><div>-</div></button>
         </div>
         <div class="row-one">
-            <div id="1" class="num">1</div>
-            <div id="2" class="num">2</div>
-            <div id="3" class="num">3</div>
-            <div id="Plus" class="num">+</div>
+            <button onclick="one()" class="num"><div>1</div></button>
+            <button onclick="two()" class="num"><div>2</div></button>
+            <button onclick="three()" class="num"><div>3</div></button>
+            <button onclick="plus()" class="num"><div>+</div></button>
         </div>
         <div class="row-one">
-            <div id="0" class="num">0</div>
-            <div id="Dot" class="num">.</div>
-            <div id="Equal" class="num">=</div>
+            <button id="zero" class="num"><div>0</div></button>
+            <button class="num"><div>.</div></button>
+            <button class="num"><div>=</div></button>
         </div>
     </div>
 </body>
