--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
             <button onclick="whipe()" class="num"><div>C</div></button>
             <button class="num"><div>+/-</div></button>
             <button class="num"><div>%</div></button>
-            <button class="num"><div>/</div></button>
+            <button onclick="devide()" class="num"><div>/</div></button>
         </div>
         <div class="row-one">
             <button onclick="seven()" class="num"><div>7</div></button>
             <button onclick="eight()" class="num"><div>8</div></button>
             <button onclick="nine()" class="num"><div>9</div></button>
-            <button class="num"><div>*</div></button>
+            <button onclick="times()" class="num"><div>*</div></button>
         </div>
         <div class="row-one">
             <button onclick="four()" class="num"><div>4</div></button>
             <button onclick="five()" class="num"><div>5</div></button>
             <button onclick="six()" class="num"><div>6</div></button>
-            <button class="num"><div>-</div></button>
+            <button onclick="minus()" class="num"><div>-</div></button>
         </div>
         <div class="row-one">
             <button onclick="one()" class="num"><div>1</div></button>
@@ -35,9 +35,9 @@
             <button onclick="plus()" class="num"><div>+</div></button>
         </div>
         <div class="row-one">
-            <button id="zero" class="num"><div>0</div></button>
+            <button onclick="zero()" id="zero" class="num"><div>0</div></button>
             <button class="num"><div>.</div></button>
-            <button class="num"><div>=</div></button>
+            <button onclick="equal()" class="num"><div>=</div></button>
         </div>
     </div>
 </body>
