Added dot and multiple operations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row-one">
             <button onclick="zero()" id="zero" class="num"><div>0</div></button>
-            <button class="num"><div>.</div></button>
+            <button onclick="dot()" class="num"><div>.</div></button>
             <button onclick="equal()" class="num"><div>=</div></button>
         </div>
     </div>
