Added change function and percentage

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="screen">0</div>
         <div class="row-one">
             <button onclick="whipe()" class="num"><div>C</div></button>
-            <button class="num"><div>+/-</div></button>
-            <button class="num"><div>%</div></button>
+            <button onclick="change()" class="num"><div>+/-</div></button>
+            <button onclick="percent()" class="num"><div>%</div></button>
             <button onclick="devide()" class="num"><div>/</div></button>
         </div>
         <div class="row-one">
