Beter desighn and diferent logic

--- a/index.html
+++ b/index.html
@@ -9,36 +9,38 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen">0</div>
-        <div class="row-one">
-            <button onclick="whipe()" class="num"><div>C</div></button>
-            <button onclick="change()" class="num"><div>+/-</div></button>
-            <button onclick="percent()" class="num"><div>%</div></button>
-            <button onclick="devide()" class="num"><div>/</div></button>
+        <div class="display">0</div>
+        <div class="numbers">
+            <button value="CE" id="btn">CE</button>
+            <button value="DEL" id="btn">DEL</button>
+            <button value="+/-" id="btn">+/-</button>
+            <button value="+" id="btn">+</button>
         </div>
-        <div class="row-one">
-            <button onclick="seven()" class="num"><div>7</div></button>
-            <button onclick="eight()" class="num"><div>8</div></button>
-            <button onclick="nine()" class="num"><div>9</div></button>
-            <button onclick="times()" class="num"><div>*</div></button>
+        <div class="numbers">
+            <button value="1" id="btn">1</button>
+            <button value="2" id="btn">2</button>
+            <button value="3" id="btn">3</button>
+            <button value="-" id="btn">-</button>
         </div>
-        <div class="row-one">
-            <button onclick="four()" class="num"><div>4</div></button>
-            <button onclick="five()" class="num"><div>5</div></button>
-            <button onclick="six()" class="num"><div>6</div></button>
-            <button onclick="minus()" class="num"><div>-</div></button>
+        <div class="numbers">
+            <button value="4" id="btn">4</button>
+            <button value="5" id="btn">5</button>
+            <button value="6" id="btn">6</button>
+            <button value="*" id="btn">*</button>
         </div>
-        <div class="row-one">
-            <button onclick="one()" class="num"><div>1</div></button>
-            <button onclick="two()" class="num"><div>2</div></button>
-            <button onclick="three()" class="num"><div>3</div></button>
-            <button onclick="plus()" class="num"><div>+</div></button>
+        <div class="numbers">
+            <button value="7" id="btn">7</button>
+            <button value="8" id="btn">8</button>
+            <button value="9" id="btn">9</button>
+            <button value="/" id="btn">/</button>
         </div>
-        <div class="row-one">
-            <button onclick="zero()" id="zero" class="num"><div>0</div></button>
-            <button onclick="dot()" class="num"><div>.</div></button>
-            <button onclick="equal()" class="num"><div>=</div></button>
+        <div class="numbers">
+            <button value="0" id="btn">0</button>
+            <button value="." id="btn">.</button>
+            <button value="%" id="btn">%</button>
+            <button value="=" id="btn">=</button>
         </div>
     </div>
+
 </body>
 </html>
